tests/golden/type_errors/imported_file_type_error_deps/lib.cd
let value = missing;
export value;
